tests/sksl/errors/UndeclaredFunction.glsl
### Compilation failed:

error: 1: unknown identifier 'foo'
void func() { int x = foo(1); }
                      ^^^
1 error
